crates/lattice-store-mongodb/tests/ui/skipped_document_id.stderr
error: Mongo identity field cannot be skipped or flattened by serde
 --> tests/ui/skipped_document_id.rs:7:5
  |
7 | /     #[mongo(id)]
8 | |     #[serde(skip)]
9 | |     id: u64,
  | |___________^
